# i18n-check

./: .gitignore  .i18n-check.yaml  .licenserc.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  complexipy-snapshot.json  example_pr_ci_i18n.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/resources/videos/: i18n_check_all_fail.mov  i18n_check_all_pass.mov
.github/workflows/: ci_pytest.yaml  pr_ci.yaml  pr_maintainer_checklist.yaml  python_package_ci.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  notes.rst
src/i18n_check/: generate_map_object.py  utils.py
tests/: test_setup.py  test_utils.py  test_yml_config_integration.py
tests/checks/: test_alt_texts.py  test_aria_labels.py  test_invalid_keys.py  test_key_formatting.py  test_key_identifiers.py  test_key_naming.py  test_missing_keys.py  test_nested_keys.py  test_non_existent_keys.py  test_non_source_keys.py  test_nonexistent_keys.py  test_ordered_keys.py  test_repeat_keys.py  test_repeat_values.py  test_sorted_keys.py  test_unused_keys.py
tests/cli/: test_generate_config_file.py  test_generate_test_frontends.py  test_main.py  test_upgrade.py  test_version.py
tests/test_frontend/: test-file.ts  test-i18n-map.ts  test_file.ts
tests/test_i18n/: test-i18n-locale.json  test-i18n-src.json
tests/test_i18n_checks/: test_utils.py
(+89 files in other folders)
