[metadata]
name = i18n-check
version = 0.1.0

description = Check i18n/L10n keys and values
long_description = file: README.md
long_description_content_type = CONTRIBUTING.md
license = MIT
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: GNU License
Operating System :: OS Independent

[options]
packages = find:

[options.data_files]
. = requirements.txt

[options.package_data]
* = *.txt, *.md
