[metadata]
name = i18n-check
description = Check i18n/L10n keys and values
description_file = README.md
keywords = i18n, l10n, internationalization, localization, ci, cli

classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: GNU License
Operating System :: OS Independent

[options.data_files]
. = requirements.txt
